--- a/Server/package.json
+++ b/Server/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "stripe": "^14.15.0"
   },
   "scripts": {
     "start": "nodemon server.js"
